--- a/about.html
+++ b/about.html
@@ -27,7 +27,16 @@ header-img: "img/post-bg-rwd.jpg"
     <h5>别联系</h5>
 
     <ul>
-        <li><a href="https://steamcommunity.com/id/ZBrief">GitHub</a></li>
+        <li><a href="https://steamcommunity.com/id/ZBrief">STEAM</a></li>
+    </ul>
+        <h5>特别感谢</h5>
+    <p>这个博客是通过BY的成品修改搭建而成</p>
+    <ul>
+        <li><a href="https://github.com/qiubaiying">BY's GitHub</a></li>
+    </ul>
+
+    <ul>
+        <li><a href="https://steamcommunity.com/id/ZBrief">STEAM</a></li>
     </ul>
 </div>
 
