--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "我让自己登基，做风的君王。"
 ---
 
 {% for post in paginator.posts %}
